[tool.poetry]
name = "tuberia"
version = "0.0.0"
description = "Tuberia... when data engineering meets software engineering"
authors = [
  "guiferviz <guiferviz@gmail.com>"
]
packages = [
    { include = "tuberia", from = "src" },
    { include = "pytest_tuberia", from = "src" },
]
readme = "README.md"
repository = "https://github.com/aidictive/tuberia"
documentation = "https://aidictive.com/tuberia"
keywords = [
  "pipeline",
  "data",
  "engineering",
  "databricks",
  "spark",
  "pyspark",
  "tables"
]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.scripts]
tuberia = "tuberia.__main__:main"


[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
prefect = "^1.2.0"
# Extra dependencies.
## Spark version must be in sync with delta-spark.
pyspark = { version = "3.2.0", optional = true }
## If you modify the version you also need to update the package name when
## building the spark session.
delta-spark = { version = "1.1.0", optional = true }


[tool.poetry.extras]
pyspark = ["pyspark", "delta-spark"]


[tool.poetry.dev-dependencies]
# Testing.
pytest = "^7.1.2"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
# Debugging.
pdbpp = "^0.10.3"
# Static analyzers / formatters.
flake8 = "^4.0.1"
pyright = "^0.0.13"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
# Docs.
mkdocs-material = "^8.2.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 80


[tool.black]
line-length = 80


[tool.pyright]
include = ["src"]


[tool.poetry.plugins.pytest11]
pytest_tuberia = "pytest_tuberia"
