[tool.poetry]
name = "movies"
version = "0.1.0"
description = "Tuberia example using movies data"
authors = ["Guillermo Fernandez <guillermo.fernandez@truata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tuberia = {path = "../..", develop = true}

[tool.poetry.group.pyspark]
optional = true

[tool.poetry.group.pyspark.dependencies]
pyspark = "^3.3.0"
delta-spark = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
